feat: add undo/redo functionality to SearchTextField